# 2048

./: Main.hs  README.md  twenty48.cabal
